--- a/css/styles_home.css
+++ b/css/styles_home.css
@@ -386,6 +386,11 @@
     }
 }
 @media (max-width: 300px) {
+        #pageHome_CardLastArticles_textsSecionV p{ font-size: 0.6rem;}
+    #pageHome_CardLastArticles_textsSecionV h3{ font-size: 0.7rem;} 
+    #pageHome_CardLastArticles_textsSecionV a {font-size: 0.6rem;}
+
+
     #pageHome_DivVertical > div:first-child h1{
         font-size: 2.2em;
     }
