--- a/css/styles_home.css
+++ b/css/styles_home.css
@@ -21,14 +21,11 @@
     display: flex;
     flex-direction: column;
     justify-content: top;
+    margin: 0 5vw 0 5vw;
 }
     #pageHome_DivVertical > div{
         text-align: center;
         margin-bottom: 2vh;
-    }
-    #pageHome_DivVertical:first-child{
-        margin-left: 10%;
-        margin-right: 10%;
     }
 
     #pageHome_SubDiv_LastArticles{
