--- a/css/styles_blog_mobile.css
+++ b/css/styles_blog_mobile.css
@@ -7,10 +7,10 @@
 }
 
 #pagesBlog_Mobile_divMain {
-    display: grid;
-    grid-template-rows: 10% 15% 50% 15%;
+    display: flex; flex-direction: column;
     margin: 0 5% 0 5%;
-    width: 100%;
+    gap:3rem;
+    width: 90%;
     height: auto;
 }
 #pagesBlog_Mobile_divMain_title {
@@ -61,7 +61,7 @@
     flex-direction: column;
     margin-left: 15%;
     margin-right: 15%;
-    gap: 3rem;
+    gap: 1rem;
     width: 70%;
     height: 100%;
 }
