--- a/css/styles_aboutme_mobile.css
+++ b/css/styles_aboutme_mobile.css
@@ -45,6 +45,12 @@
 
 
 
+#div_whatIDo_Mobile_Btns_btnAndroid, #div_whatIDo_Mobile_Btns_btnWeb, #div_whatIDo_Mobile_Btns_btnGames, #div_whatIDo_Mobile_Btns_btnClases{
+    font-size: 13px;
+}
+
+
+
 
 
 
